<resources>
    <string name="app_name">AndroidProject</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login_title">Вход</string>
    <string name="username_hint">Электронная почта</string>
    <string name="password_hint">Пароль</string>
    <string name="remember_hint">Запомнить пароль</string>
    <string name="login_button_text">Войти</string>
    <string name="login_label">Клиника</string>
    <string name="signup_button_text">У меня нет профиля</string>
    <string name="title_activity_home">home</string>
    <string name="appointments_label">Записи</string>
    <string name="no_appointments_text">У вас пока нет ни одной записи</string>
    <string name="new_appointment_btn">Записаться на приём</string>
    <string name="home_smile_desc">:)</string>
    <string name="registration_label">Регистрация</string>
    <string name="reg_email_hint">Электронная почта</string>
    <string name="reg_name_hint">ФИО</string>
    <string name="reg_birthdate_hint">Дата рождения</string>
    <string name="male_radio_btn">Муж</string>
    <string name="female_radio_btn">Жен</string>
    <string name="register_btn">Зарегистрироваться</string>
    <string name="reg_password_hint">Пароль</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification_title">Запись на прием</string>
    <string name="notification_text">Ваша запись подтверждена!</string>
</resources>