<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:text="@string/login_title"
            android:textAlignment="center"
            android:textSize="48sp" />

        <EditText
            android:id="@+id/usernameText"
            android:layout_width="355dp"
            android:layout_height="61dp"
            android:layout_gravity="center_horizontal"
            android:paddingHorizontal="20dp"
            android:ems="10"
            android:hint="@string/username_hint"
            android:autofillHints="username"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="355dp"
            android:layout_height="61dp"
            android:layout_gravity="center_horizontal"
            android:paddingHorizontal="20dp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:autofillHints="password"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/rememberPasswordCheckbox"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:text="@string/remember_hint" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_button_text" />
        <Button
            android:id="@+id/signUpButton"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="center_horizontal"
            android:text="@string/signup_button_text" />

        <ImageView
            android:id="@+id/caduceusImage"
            android:layout_width="200dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            app:tint="@color/purple_500"
            app:srcCompat="@drawable/caduceus" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>